welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:10: error: not found: value x
      x=getX()
      ^Diagonal:11: error: not found: value x
      setPos(x+1, y-1)
             ^