welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.code
var diag = 0;

def tag(i:Int){
  ecritMessage(i)
}

override def run() {
  var nb=0
  for(y<-0 to getMondeHauteur()-1){
    while(y!=0){
      x=getX()
      setPos(x+1, y-1)
      tag(nb)
      nb=nb+1
    }
  }
}